--- a/activity02.html
+++ b/activity02.html
@@ -16,8 +16,8 @@
    <div>
     <h2 id="topics">Topics</h2>
     <ol type="I">
-        <li>introduction to Web</li>
-        <li>introduction to HTML5</li>
+        <li>introduction to Web TRYSS</li>
+        <li>introduction to HTML22</li>
         <li>Web Application Development Tools</li>
         <li>introduction to Web Programming Language</li>
         <li>Using Web Forms</li>
